--- a/index.html
+++ b/index.html
@@ -1,106 +1,128 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <link rel="manifest" href="manifest.json">
-    <title>Sorteio Estilo Instagram</title>
-    <style>
-        /* Estilos Gerais */
-        body {
-            font-family: 'Helvetica Neue', sans-serif;
-            background: linear-gradient(to right, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
-            color: white;
-            text-align: center;
-            padding: 0;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
+  <title>Sorteio Estilo Instagram</title>
+  <style>
+    /* Estilos Gerais */
+    body {
+        font-family: 'Helvetica Neue', sans-serif;
+        background: linear-gradient(to right, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+        color: white;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 
+    h1 {
+        font-size: 2.5em;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    form {
+        background-color: rgba(255, 255, 255, 0.1);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        width: 90%;
+        max-width: 500px;
+    }
+
+    textarea {
+        width: 100%;
+        height: 100px;
+        padding: 10px;
+        border-radius: 10px;
+        border: 2px solid rgba(255, 255, 255, 0.4);
+        outline: none;
+        background-color: rgba(255, 255, 255, 0.7);
+        color: #333;
+        font-size: 1em;
+        resize: none;
+        box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: background-color 0.3s, border-color 0.3s;
+    }
+
+    textarea:focus {
+        background-color: rgba(255, 255, 255, 0.9);
+        border-color: #ffadc5;
+    }
+
+    button {
+        background: linear-gradient(to right, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 30px;
+        font-size: 1.2em;
+        cursor: pointer;
+        margin-top: 10px;
+        transition: background 0.3s;
+    }
+
+    button:hover {
+        background: linear-gradient(to right, #bc1888, #cc2366, #dc2743, #e6683c, #f09433);
+    }
+
+    #resultado {
+        margin-top: 20px;
+        font-weight: bold;
+        font-size: 24px;
+        color: #ffe5f0;
+        text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    .animacao {
+        animation: rodarNomes 0.1s infinite, escalar 0.1s infinite;
+    }
+
+    @keyframes rodarNomes {
+        0% { color: #ffe5f0; }
+        50% { color: #ffadc5; }
+        100% { color: #ffe5f0; }
+    }
+
+    @keyframes escalar {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.2); }
+        100% { transform: scale(1); }
+    }
+
+    .vencedor {
+        text-shadow: 0 0 20px #ffadc5, 0 0 30px #ffadc5, 0 0 40px #ffadc5;
+    }
+
+    /* Responsividade */
+    @media (max-width: 600px) {
         h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
-
-        form {
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 500px;
-        }
-
-        textarea {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            border-radius: 10px;
-            border: 2px solid rgba(255, 255, 255, 0.4);
-            outline: none;
-            background-color: rgba(255, 255, 255, 0.7);
-            color: #333;
-            font-size: 1em;
-            resize: none;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s, border-color 0.3s;
-        }
-
-        textarea:focus {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-color: #ffadc5;
+            font-size: 2em; /* Tamanho menor em telas pequenas */
         }
 
         button {
-            background: linear-gradient(to right, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 30px;
-            font-size: 1.2em;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background 0.3s;
-        }
-
-        button:hover {
-            background: linear-gradient(to right, #bc1888, #cc2366, #dc2743, #e6683c, #f09433);
+            font-size: 1em; /* Tamanho do botão menor em telas pequenas */
+            padding: 8px 16px;
         }
 
         #resultado {
-            margin-top: 20px;
-            font-weight: bold;
-            font-size: 24px;
-            color: #ffe5f0;
-            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+            font-size: 20px; /* Tamanho do resultado menor em telas pequenas */
         }
+    }
 
-        .animacao {
-            animation: rodarNomes 0.1s infinite, escalar 0.1s infinite;
+    @media (min-width: 601px) {
+        h1 {
+            font-size: 3em; /* Tamanho maior em telas grandes */
         }
-
-        @keyframes rodarNomes {
-            0% { color: #ffe5f0; }
-            50% { color: #ffadc5; }
-            100% { color: #ffe5f0; }
-        }
-
-        @keyframes escalar {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-            100% { transform: scale(1); }
-        }
-
-        .vencedor {
-            text-shadow: 0 0 20px #ffadc5, 0 0 30px #ffadc5, 0 0 40px #ffadc5;
-        }
-    </style>
+    }
+  </style>
 </head>
 <body>
-  
+
     <img src="logo-instagram.png" alt="Instagram Logo" style="width: 100px; margin-bottom: 20px;">
     
     <h1>Sorteio</h1>
