--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
     <p id="resultado"></p>
     
     <script>
+      
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/service-worker.js')
+        .then(function() {
+            console.log("Service Worker registrado com sucesso.");
+        })
+        .catch(function(error) {
+            console.log("Falha no registro do Service Worker:", error);
+        });
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js')
         .then(function() {
